@@ -262,6 +262,8 @@ public class ZircoMain extends Activity implements IToolbarsContainer, OnTouchLi
 		if (PreferenceManager.getDefaultSharedPreferences(this).getBoolean(Constants.PREFERENCES_PRIVACY_CLEAR_CACHE_ON_EXIT, false)) {
 			mCurrentWebView.clearCache(true);
 		}
+		
+		EventController.getInstance().removeDownloadListener(this);
 
 		super.onDestroy();
 	}
